Remove daed links from Research page. Fix mobile spacing for footer.

--- a/public_website/static/css/style.css
+++ b/public_website/static/css/style.css
@@ -16,8 +16,8 @@ body.grey-background {
 @media (max-width: 576px) {
     .sawaliram-container {
         margin-top: calc(35px + 1rem);
-        padding-left: 0;
-        padding-right: 0;
+        padding: 0;
+        padding-bottom: 4rem;
     }
 }
 
@@ -2983,6 +2983,7 @@ p.tab-section-status.pending {
 .bibliography-section {
     width: 80%;
     margin: auto;
+    margin-top: 3rem;
 }
 
 .bibliography-section h2 {
@@ -3077,6 +3078,12 @@ footer.wavy-footer .footer-main > * {
 }
 
 @media(max-width: 576px) {
+    footer.wavy-footer .footer-main .footer-column:first-child {
+        margin-bottom: 0;
+    }
+}
+
+@media(max-width: 576px) {
     footer.wavy-footer::before {
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 127.26 8.73' preserveAspectRatio='none'%3E%3Crect x='0' y='0' width='481' height='33.000568' style='stroke: none; fill: %23ffffff00;' /%3E%3Cpath transform='translate(-45.413677,-136.54897)' d='m 45.413677,140.91459 v -4.36562 l 8.003646,0.004 c 14.964243,0.007 26.318339,0.98441 44.780728,3.85421 18.513229,2.87769 30.573779,4.26652 40.745829,4.69207 1.01865,0.0426 -19.60893,0.10081 -45.839058,0.12931 l -47.691145,0.0518 z m 110.992703,4.07738 c 5.36172,-0.35747 11.7206,-1.27265 15.58937,-2.24365 0.6669,-0.16738 0.68251,-0.1404 0.68251,1.1803 v 1.3516 l -9.72344,-0.0383 c -7.61549,-0.03 -9.03513,-0.0842 -6.54844,-0.24996 z' style='stroke: none; fill: %23414141;'%3E%3C/path%3E%3C/svg%3E");
         background-repeat: no-repeat;
@@ -3127,7 +3134,7 @@ footer .footer-main .footer-column:last-child {
 @media (max-width: 576px) {
     footer .footer-main .footer-column,
     footer .footer-main .footer-column:last-child {
-        padding: 0 2rem;
+        padding: 0 1rem;
     } 
 }
 
